<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">اینکام</string>

    <string name="next">بعدی</string>
    <string name="choose_lang">انتخاب زبان</string>
    <string name="select_lang">لطفا زبان یا گویش مورد نظر خود را انتخاب کنید</string>
    <string name="farsi">فارسی</string>
    <string name="kurdey">کوردی</string>
    <string name="turkey">تورکی</string>

    <string name="login_inkam">ورود به اینکام</string>
    <string name="income_verification">تایید شماره موبایل</string>
    <string name="enter_verification_code">کد ارسال شده به شماره موبایل را وارد نمایید.</string>
    <string name="enter_phone">لطفا شماره موبایل خود را وارد نمایید.</string>
    <string name="continue_">ادامه</string>
    <string name="send_again">ارسال مجدد</string>

    <string name="invitation_code">کد معرف</string>
    <string name="do_not_have_invitation">کد معرف ندارم</string>
    <string name="optional">(اختیاری)</string>
    <string name="submit_code">ثبت کد</string>
    <string name="explain_invitation_one">با وارد کردن کد معرف ۱۰ شانس قرعه کشی دریافت کنید</string>
    <string name="explain_invitation_two">تراکنش اولتان را ۲ برابر کنید</string>

    <string name="enter_pass">لطفا رمز عبور خود را وارد نمایید.</string>
    <string name="password">رمز عبور</string>
    <string name="enter">ورود</string>
    <string name="forgot_password">فراموشی رمز عبور</string>

    <string name="complete_profile">تکمیل پروفایل</string>
    <string name="choose_photo">انتخاب عکس</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام خانوادگی</string>
...

    <string name="intro_title_one">با خرید های همیشگی خود و اطرافیانتان مادام العمر کسب درآمد کنید!</string>
    <string name="intro_title_two">صندوق قرعه کشی</string>
    <string name="intro_title_two_text">بر اساس مقدار خرید شانس برای برنده شدن مبلغ موجود در صندوق قرعه کشی دریافت کنید</string>
    <string name="intro_title_three">کسب درآمد مادام العمر با معرفی اینکام</string>
    <string name="intro_title_three_text">با معرفی اینکام به اطرافیان خودتان به صورت مادام العمر به ازای هر خرید آنها از اینکام درصدی از سود خرید آنها به اعتبار کیف پول شما اضافه خواهد شد</string>
    <string name="start">شروع کنید</string>
    <string name="empty"> </string>

    <string name="recover_pass_title">بازیابی رمز عبور</string>
    <string name="recover_pass">لطفا بعد از وارد کردن کد پیامک شده، رمز عبور جدید خود را وارد نمایید</string>
    <string name="code">کد</string>
    <string name="new_pass">رمز عبور جدید</string>
...
